fix: fixing display on mobile first

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -39,15 +39,20 @@
     margin-bottom: 1em;
   }
   &__cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(13.5em, 1fr));
-    gap: 2em;
+    @media screen and (min-width: 700px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(13.5em, 1fr));
+      gap: 2em;
+    }
   }
 }
 
 .card {
   width: 100%;
   font-family: 'Raleway';
+  @media screen and (max-width: 700px) {
+    margin-bottom: 3em;
+  }
 
   &__images {
     position: relative;
