--- a/src/scss/pages/_prices.scss
+++ b/src/scss/pages/_prices.scss
@@ -11,9 +11,14 @@
     padding: 1em;
     margin-inline: auto;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
-    gap: 3em;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+    // gap: 3em;
+    @media screen and (min-width: 700px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+      gap: 3em;
+    }
   }
 }
 
@@ -112,14 +117,17 @@
     padding: 0.5em;
     position: absolute;
     bottom: -1.3em;
-    left: 32%;
+    left: 33%;
     color: white;
     border-radius: 1.125rem;
 
     cursor: pointer;
 
-    @media screen and (min-width: 512px) {
-      left: 25%;
+    @media screen and (min-width: 500px) {
+      left: 33%;
+    }
+    @media screen and (min-width: 700px) {
+      left: 28%;
     }
     &--basic {
       background-color: rgba(235, 71, 110, 1);
