--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -62,5 +62,5 @@
   color: red;
 }
 .input--error {
-  border-bottom: 1px solid red;
+  border: 1px solid red;
 }
